[gd_scene load_steps=2 format=3 uid="uid://drjexuludyhlf"]

[ext_resource type="Script" uid="uid://cxxjt7iwptfj4" path="res://hangman.gd" id="1_a5g71"]

[node name="HangmanGame" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_a5g71")

[node name="WordLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="GuessInput" type="LineEdit" parent="."]
layout_mode = 0
offset_right = 68.5625
offset_bottom = 31.0

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
